--- a/signin.css
+++ b/signin.css
@@ -9,9 +9,9 @@ body {
   /* Styling for the sign in container */
   .sign {
     max-width: 500px;
-    height: 600px;
+    height: 560px;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 5px;
     background-color: #fff;
     padding: 30px;
     border-radius: 8px;
@@ -138,7 +138,7 @@ body {
 
   
   /* Styling for the social media buttons */
-  .sign input[type="button"] {
+  button {
     background-color:#039be5 ;
     color: #fff;
     border: 1px solid #ccc;
@@ -148,35 +148,43 @@ body {
     border-radius: 8px;
     cursor: pointer;
     width: 400px;
-    margin-bottom: 15px;
+    height: 62px;
+    margin: 0px 0px 5px 0px;
     line-height: 28px;
+    position: relative;
+  }
+  
+  .google-button {
+    background-color: #000000;
+  }
+  
+  button img {
+    width: 35px;
+    position: absolute;
+    top: 15px;
+    left: 10px;
+    /* margin: 5px 0px 0px 0px; */
   }
   
   .sign input[type="button"]:hover {
     border-color: #999;
   }
-
+  
   .sign input[value="Google"] {
     background-color: white;
     color:black ;
   }
   
-  .google {
-    margin-top: -20px;
-  }
-
+  
   /* Styling for the sign up link */
-
+  
   .sign .dont-have-acct{
     /* text-align: right; */
-    margin: -20px 0px 0px 140px;
+    margin: 0px 0px 0px 140px;
   }
   
   .sign p:last-child a {
     color: #1860a3;
     text-decoration: none;
   }
-
-
-  
   
