Updated index file

--- a/signup.css
+++ b/signup.css
@@ -19,8 +19,9 @@ body {
 }
 
 .img-div {
-  display: flex;
-  justify-content: center;
+  width: 45%;
+  text-align: center;
+  margin: -20px 0px -10px 0px;
 }
 .logo-img {
   width: 209px;
