--- a/index.css
+++ b/index.css
@@ -8,137 +8,21 @@ body {
     /* padding: 0px 120px 0px 120px; */
     max-width: 1200px;
     margin: auto;
-    display: grid;
-    grid-template-areas: 
-    'header header header'
-    'nav aside aside'
-    'main main main'
-    'footer footer footer'
-    ;
-    grid-template-columns: 330px 1fr 1fr 1fr;
-    grid-template-rows: 80px 690px 1fr 100px;
+   
 }
 
-header {
-    grid-area: header;
-    width: 1220px;
-    height: 80px;
+.nav-aside {
     display: flex;
-    align-items: center;
-    background-color: #EEEEEE;
-    padding: 0px 20px 0px 20px;
-}
-
-header .logo-div a img {
-    width: 162px;
-    height: 36px;
-}
-
-header .search-div {
-    margin-left: 126px;
-    position: relative;
-}
-header .search-div img {
-    position: absolute;
-    top: 12px;
-    left: 30px;
-}
-
-header .search-div input {
-    width: 411px;
-    padding-left: 30px;
-    margin-left: 20px;
-    height: 40px;
-    border-radius: 8px;
-    border: 1px #1860A3 solid;
-}
-header .search-div input::placeholder {
-    font-size: 16px;
-}
-
-.acct {
-    padding: 0px 5px 0px 5px;
-}
-.acct-img {
-    width: 20px;
-    /* margin-left: -20px; */
-    position: absolute;
-    left: -9px;
-}
-
-/* dropdown style start */
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    left: -55px;
-    background-color: #FFFFFF;
-    min-width: 150px;
-    height: 150px;
-    border-radius: 8px;
-    padding: 5px;
-    z-index: 1;
-}
-.dropdown-content a {
-    color: black;
-    padding: 13px 0px 0px 20px;
-    text-decoration: none;
-    display: block;
-    margin: 0px 0px 0px 20px;
-    position: relative;
-}
-.dropdown-content a:hover {
-    font-size: 19px;
-}
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-/* dropdown style end */
-
-header .links-div {
-    width: 100%;
-    display: flex;
-    /* align-items: center; */
-    justify-content: end;
-    /* margin: 0px 0px 0px 20px; */
-}
-header .links-div div {
-    margin: 0px 0px 0px 30px;
-}
-header .links-div div a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    /* margin: 0px 0px 0px 30px; */
-}
-.cart-div {
-    position: relative;
-}
-
-.cart-total {
-    padding-top: 5px;
-    display: block;
-    color: #fff;
-    background-color: #F2994A;
-    width: 24px;
-    text-align: center;
-    height: 24px;
-    font-size: 14px;
-    border-radius: 50%;
-    position: absolute;
-    top: -20px;
-    left: -10px;
+    margin-bottom: 90px;
 }
 
 /* nav style start */
 nav {
-    grid-area: nav;
+    width: 307px;
     background-color: #EEEEEE;
     height: 540px;
+    margin-top: 10px;
+    padding-top: 10px;
 }
 
 nav div {
@@ -232,7 +116,8 @@ nav div .other {
 
 /* aside style start */
 aside {
-    grid-area: aside;
+    width: 893px;
+    margin-top: 10px;
     /* background-color: black; */
 }
 aside img {
@@ -384,27 +269,34 @@ main .second-div-0 .div-1 p {
     border-radius: 8px;
     margin: 30px 0px 30px 0px;
     width: 1200px;
-    height: 940px;
+    /* height: 644px; */
+    /* height: 940px; */
 }
 .third-cont h1 {
     text-align: center;
     padding-top: 10px;
 }
 .third-cont .third-0 {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    width: 1200px;
     margin-top: 20px;
 }
 
 .third-cont .item-0 {
     background-color: #FFFFFF;
-    width: 100%;
-    height: 420px;
+    width: 270px;
+    height: 440px;
     margin: 0px 10px 0px 10px;
     border-radius: 8px;
     padding: 0px 10px 0px 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+    margin: 10px 0px 10px 15px;
+}
+.third-cont .item-0 a{
+    text-decoration: none;
+    color: #282828;
+    font-size: 18px;
 }
 /* .third-cont .item-0:hover {
     width: 110%;
@@ -427,6 +319,7 @@ main .second-div-0 .div-1 p {
     background-color: #F2994A;
     color: #FFFFFF;
     cursor: pointer;
+    margin-top: 7px;
 }
 .third-cont .third-0 button:hover {
     background-color: rgb(216, 123, 30);
@@ -792,6 +685,4 @@ footer .footer-div-3 div a img:hover{
     width: 30px;
 }
 
-
 /* footer style end */
-
