--- a/fashion.css
+++ b/fashion.css
@@ -121,39 +121,48 @@ header .links-div div a {
 .third-cont {
     background-color: #EEEEEE;
     border-radius: 8px;
-    margin: 30px 0px 30px 0px;
-    width: 1200px;
-    height: 940px;
+    margin: 30px 0px 0px 0px;
+    width: 1220px;
     margin: auto;
+    padding-bottom:10px;
 }
-.third-cont h1 {
-    text-align: center;
-    padding-top: 10px;
 
-}
 .third-cont .third-0 {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-top: 60px;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    width: 1200px;
+    /* margin-top: 0px; */
+}
+
+.fash-div {
+    border-bottom: 1px solid;
+    text-align: center;
+}
+.fash-div h2{
+    padding-top: 10px;
 }
 
 .third-cont .item-0 {
     background-color: #FFFFFF;
-    width: 100%;
-    height: 420px;
-    margin: 0px 10px 0px 10px;
+    width: 210px;
+    height: 323px;
+    margin: 20px 0px 0px 11px;
     border-radius: 8px;
     padding: 0px 10px 0px 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 }
-/* .third-cont .item-0:hover {
-    width: 110%;
-    height: 430px;
-} */
+.third-cont .item-0 a {
+    text-decoration: none;
+    color: #282828;
+}
+.third-cont .item-0 a p img{
+    width: 13px;
+}
 .third-cont .third-0 .item-img-0 {
-    width: 252px;
-    height: 301px;
+    width: 117px;
+    height: 176px;
+    margin: 0px 0px 0px 45px;
+    padding-top: 0px;
 }
 .third-cont .third-0 .item-description-p {
     font-size: 14px;
@@ -161,18 +170,22 @@ header .links-div div a {
     font-style: bold;
 }
 .third-cont .third-0 button {
-    width: 100%;
-    height: 43.28px;
+    width: 214.5px;
+    height: 34.62px;
     border-radius: 8px;
     border: 0px;
     background-color: #F2994A;
     color: #FFFFFF;
     cursor: pointer;
+    /* margin-top: 5px; */
 }
 .third-cont .third-0 button:hover {
     background-color: rgb(216, 123, 30);
 }
 
+.third-cont .item-0 .star-div {
+    margin-top: -10px;
+}
 
 .checked {
     color: orange;
@@ -183,7 +196,7 @@ header .links-div div a {
 footer {
     width: 1200px;
     height: 272px;
-    grid-area: footer;
+    /* grid-area: footer; */
     background-color: #282828;
     color: #FFFFFF;
     display: flex;
