--- a/header-footer.css
+++ b/header-footer.css
@@ -3,12 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-body {
-    /* text-align: center; */
+/* body {
+    text-align: center;
     display: grid;
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
-}
+} */
 
 header {
     margin: auto;
